# lca_writer

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  data.rst  index.rst  lca_writer.rst  make.bat  scripts.rst
lca_writer/: __init__.py  lca_writer.py  lca_writer_test.py  scripts.py
lca_writer/data/: __init__.py  lca_form.xlsx  loader.py  test_lca_12_2.lca
lca_writer/tests/: test_lca_writer.py
scripts/: lca_writer
