[bdist_wheel]
universal = 1

[metadata]
project = LCA Writer
name = lca_writer
version = 0.0.0
author = Matt Pewsey
copyright = 2018, Matt Pewsey
description = Create PLS-POLE and TOWER Load Case Analysis (LCA) files.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/line-mind/lca_writer
keywords =
  pls-cadd
  transmission-line
  report-generator
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
install_requires =
  pandas>=0.23.0
  xlrd>=1.1.0
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.extras_require]
test =
  pytest>=3.5.1
  pytest-cov>=2.5.1
  codecov>=2.0.15
docs =
  jinja2>=2.10
  recommonmark>=0.4.0
  docutils==0.14
